<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">元易</string>
    <string name="app_title">元      易</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="home_tabbar_home">首页</string>
    <string name="home_tabbar_goods">商品</string>
    <string name="home_tabbar_business">商家</string>
    <string name="home_tabbar_user">我的</string>
    <string name="home_back">请再按一次退出</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">释放立即刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    
    <string name="login">登录</string>
    <string name="register">注册</string>
    
    <string name="icon1">现金券</string>
    <string name="icon2">会员卡</string>
    <string name="icon3">我在哪</string>
    <string name="icon4">服务</string>
    <string name="icon5">智能家居</string>
    <string name="icon6">返现宝</string>
    <string name="icon7">玩游戏</string>
    <string name="icon8">看电影</string>
    
     <string name="icon_loading">加载中</string>
     
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
<string name="no_result">对不起，没有搜索到相关数据！</string>
</resources>