<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white_color" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dip"
        android:layout_marginRight="7dip"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="7dip"
            android:paddingTop="8dip" >

            <Button
                android:id="@+id/icon1"
                style="@style/home_icon_style"
                android:drawableTop="@drawable/icon1"
                android:text="@string/icon1"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="7dip"
            android:paddingTop="8dip" >

            <Button
                android:id="@+id/icon2"
                style="@style/home_icon_style"
                android:drawableTop="@drawable/icon2"
                android:text="@string/icon2"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="7dip"
            android:paddingTop="8dip" >

            <Button
                android:id="@+id/icon3"
                style="@style/home_icon_style"
                android:drawableTop="@drawable/icon3"
                android:text="@string/icon3"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="7dip"
            android:paddingTop="8dip" >

            <Button
                android:id="@+id/icon4"
                style="@style/home_icon_style"
                android:drawableTop="@drawable/icon4"
                android:text="@string/icon4"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dip"
        android:layout_marginRight="7dip"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="7dip"
            android:paddingTop="8dip" >

            <Button
                android:id="@+id/icon5"
                style="@style/home_icon_style"
                android:drawableTop="@drawable/icon5"
                android:text="@string/icon5"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="7dip"
            android:paddingTop="8dip" >

            <Button
                android:id="@+id/icon6"
                style="@style/home_icon_style"
                android:drawableTop="@drawable/icon6"
                android:text="@string/icon6"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="7dip"
            android:paddingTop="8dip" >

            <Button
                android:id="@+id/icon7"
                style="@style/home_icon_style"
                android:drawableTop="@drawable/icon7"
                android:text="@string/icon7"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="7dip"
            android:paddingTop="8dip" >

            <Button
                android:id="@+id/icon8"
                style="@style/home_icon_style"
                android:drawableTop="@drawable/icon8"
                android:text="@string/icon8"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>