<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:myview="http://schemas.android.com/apk/res/com.yy.yyapp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#F1F1F1" >

        <com.yy.yyapp.view.MyImageView
            android:id="@+id/default_load_img"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:src="@drawable/start_logo" />

        <android.support.v4.view.ViewPager
            android:id="@+id/circlepager"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <com.viewpagerindicator.CirclePageIndicator
            android:id="@+id/circleindicator"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dip"
            android:paddingLeft="5dip"
            android:visibility="gone"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dip"
        android:layout_marginRight="7dip"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="7dip"
            android:paddingTop="8dip" >

            <Button
                android:id="@+id/icon1"
                style="@style/home_icon_style"
                android:drawableTop="@drawable/icon1"
                android:text="@string/icon1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="7dip"
            android:paddingTop="8dip" >

            <Button
                android:id="@+id/icon2"
                style="@style/home_icon_style"
                android:drawableTop="@drawable/icon2"
                android:text="@string/icon2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="7dip"
            android:paddingTop="8dip" >

            <Button
                android:id="@+id/icon3"
                style="@style/home_icon_style"
                android:drawableTop="@drawable/icon3"
                android:text="@string/icon3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="7dip"
            android:paddingTop="8dip" >

            <Button
                android:id="@+id/icon4"
                style="@style/home_icon_style"
                android:drawableTop="@drawable/icon4"
                android:text="@string/icon4" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dip"
        android:layout_marginRight="7dip"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="7dip"
            android:paddingTop="8dip" >

            <Button
                android:id="@+id/icon5"
                style="@style/home_icon_style"
                android:drawableTop="@drawable/icon5"
                android:text="@string/icon5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="7dip"
            android:paddingTop="8dip" >

            <Button
                android:id="@+id/icon6"
                style="@style/home_icon_style"
                android:drawableTop="@drawable/icon6"
                android:text="@string/icon6" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="7dip"
            android:paddingTop="8dip" >

            <Button
                android:id="@+id/icon7"
                style="@style/home_icon_style"
                android:drawableTop="@drawable/icon7"
                android:text="@string/icon7" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="7dip"
            android:paddingTop="8dip" >

            <Button
                android:id="@+id/icon8"
                style="@style/home_icon_style"
                android:drawableTop="@drawable/icon8"
                android:text="@string/icon8" />
        </LinearLayout>
    </LinearLayout>
    <!-- 新鲜事 -->

</LinearLayout>