<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/home_bg"
        android:orientation="vertical"
        android:visibility="visible" >

        <FrameLayout
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_bg"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/home_tabbar_home"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/home_tabbar_home_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/bottom1_n" />

                <TextView
                    android:id="@+id/home_tabbar_home_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/home_tabbar_home_img"
                    android:layout_centerHorizontal="true"
                    android:text="@string/home_tabbar_home"
                    android:textColor="@color/home_menu_normal"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/home_tabbar_goods"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/home_tabbar_goods_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/bottom3_n" />

                <TextView
                    android:id="@+id/home_tabbar_goods_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/home_tabbar_goods_img"
                    android:layout_centerHorizontal="true"
                    android:text="@string/home_tabbar_goods"
                    android:textColor="@color/home_menu_normal"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/home_tabbar_business"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/home_tabbar_business_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/bottom4_n" />

                <TextView
                    android:id="@+id/home_tabbar_business_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/home_tabbar_business_img"
                    android:layout_centerHorizontal="true"
                    android:text="@string/home_tabbar_business"
                    android:textColor="@color/home_menu_normal"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/home_tabbar_user"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/home_tabbar_user_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/bottom5_n" />

                <TextView
                    android:id="@+id/home_tabbar_user_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/home_tabbar_user_img"
                    android:layout_centerHorizontal="true"
                    android:text="@string/home_tabbar_user"
                    android:textColor="@color/home_menu_normal"
                    android:textSize="12sp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>